--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
+  "scripts": {
+    "build": "babel src --watch -d dist"
+  },
+  "browserslist": "> 0.25%",
   "dependencies": {
-    "babel": "^5.8.38"
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.7"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.26.7"
   }
 }
